<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>nl.fontys.sebivenlo</groupId>
        <artifactId>sebipom</artifactId>
        <version>3.0.2</version>
        <relativePath/>
    </parent>
    <description>
        Surveyor is a toy app that plays a bit with the math on surveying.
    </description>
    <groupId>surveyor</groupId>
    <artifactId>surveyor</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <javafx.version>16</javafx.version>
        <org.testfx.version>4.0.15-alpha</org.testfx.version>
        <exec.mainClass>surveyor/surveyor.SurveyorApp</exec.mainClass>
        <!-- add add-opens lines for **ALL** packages in your module that are tested.
            For testing it is fine to open your packages for the whole world, which includes
            e.g. junit, assertj, mockito, and jacoco, to name a few.
            Also leave  because it is set/used by the coverage plugin.
        -->
        <surefire.opens>
            --add-opens surveyor/surveyor=ALL-UNNAMED 
            --add-opens javafx.graphics/com.sun.javafx.application.ParametersImpl=ALL-UNNAMED
            --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
            --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
            --add-exports javafx.graphics/com.sun.glass.ui.delegate=ALL-UNNAMED
        </surefire.opens>
    </properties>
    <dependencies>
        <dependency>
            <groupId>nl.fontys.sebivenlo</groupId>
            <artifactId>fxtriangulate</artifactId>
            <version>1.0.1-SNAPSHOT</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-junit5</artifactId>
            <version>${org.testfx.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-junit</artifactId>
            <version>${org.testfx.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-core</artifactId>
            <version>${org.testfx.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>openjfx-monocle</artifactId>
            <version>jdk-12.0.1+2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>

